Fix menu width on mobile

--- a/src/user-data.css
+++ b/src/user-data.css
@@ -108,8 +108,4 @@
         font-size: 16px;
         display: none;
     }
-
-    #dropdown {
-        width: 50vw;
-    }
 }
